--- a/manage/jsconfig.json
+++ b/manage/jsconfig.json
@@ -5,6 +5,7 @@
             "@components/*":["src/components/*"],
             "@utils/*":["src/utils/*"],
             "@styles/*":["styles/*"],
+            "@store/*":["store/*"],
         }
     }
 }
