--- a/manage/package.json
+++ b/manage/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.21.7",
-    "next": "12.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "echarts": "^5.3.3",
+    "next": "12.1.6",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6"
   }
